add emojis to the suggestion

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         <h4 class="text">
           What are the best tips to improve my public speaking skills?
         </h4>
-        <span class="icon materials-symbols-rounded">
-          Draw
+        <span class="icon material-symbols-rounded">
+      Lightbulb
         </span>
       </li>
 
@@ -43,8 +43,8 @@
         <h4 class="text">
         Can you help me to find the  latest news on web development?
         </h4>
-        <span class="icon materials-symbols-rounded">
-          Draw
+        <span class="icon material-symbols-rounded">
+       Explore
         </span>
       </li>
 
@@ -53,8 +53,8 @@
         <h4 class="text">
           Write Javascript code to sum all elements in an array
         </h4>
-        <span class="icon materials-symbols-rounded">
-          Draw
+        <span class="icon material-symbols-rounded">
+         Code
         </span>
       </li>
 
