--- a/index.html
+++ b/index.html
@@ -63,6 +63,23 @@
 
     </ul>
   </header>
+
+  <!--Typing area-->
+  <div class="typing-area">
+    <form action="#" class="typing-form">
+      <div class="input-wrapper">
+        <input type="text" placeholder="Enter a prompt here" class="typing-input" required>
+        <button class="icon material-symbols-rounded">send</button>
+      </div>
+      <div class="action-buttons">
+        <span class="icon material-symbols-rounded">light_mode</span>
+        <span class="icon material-symbols-rounded">delete</span>
+      </div>
+    </form>
+    <p class="disclaimer-text">
+      Gemini may display inaccurate info, including about people so double check its responses.
+    </p>
+  </div>
 </body>
 
 </html>
