--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gemini - Your own chat LLM</title>
+  
+  <link rel="stylesheet" href="style.css">
   <!--Linking google font icons-->
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,0,0" />
+
 </head>
 
 <body>
